--- a/GlobalBluePurchased.Domain/GlobalBluePurchased.Domain.csproj
+++ b/GlobalBluePurchased.Domain/GlobalBluePurchased.Domain.csproj
@@ -15,4 +15,19 @@
     <Folder Include="Handler\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\Resources.SharedResource.en-US.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.SharedResource.en-US.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Resources.SharedResource.en-US.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.SharedResource.en-US.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
